--- a/index.html
+++ b/index.html
@@ -324,7 +324,14 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    https://www.canva.com/design/DAGSZFfMKN4/7LuQ4VG305zCWdzIhUeROQ/view?utm_content=DAGSZFfMKN4&utm_campaign=designshare&utm_medium=link&utm_source=editor
+                                  <div style="position: relative; width: 100%; height: 0; padding-top: 77.2727%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGSZFfMKN4/8sI8LRacm3pjCnUFirltzA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGSZFfMKN4&#x2F;8sI8LRacm3pjCnUFirltzA&#x2F;view?utm_content=DAGSZFfMKN4&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Nila Fitria
                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/galeri.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
