--- a/index.html
+++ b/index.html
@@ -361,13 +361,14 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-
- <body> 
-    <h1>Welcome to Page 1</h1> 
-    <a href="video.html">Go to Page 2</a> 
-     </body> 
-
-
+<div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGSTPEeZ9o/gqNxm8JTkSeTe_-JYmw4tg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGSTPEeZ9o&#x2F;gqNxm8JTkSeTe_-JYmw4tg&#x2F;view?utm_content=DAGSTPEeZ9o&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Nila Fitria
                                     
                             </div>
                         </div>
