--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Jurnal Ilmiah</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Pembelajaran</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -361,11 +361,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                   <h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<a href="https://www.example.com">This is a link</a
-                                  
-                                </div>
+									<div
+                                   <script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-5b3a81cb-1e37-4396-972a-471f555b23f6" data-elfsight-app-lazy></div>
                             </div>
                         </div>
                     </div>
