--- a/index.html
+++ b/index.html
@@ -76,56 +76,66 @@
                             <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal1.png" alt="..." />
                                       </div>
                          </div>
-                                                         <!-- Portfolio Item 2-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/galeri1.png"  alt="..." />
-                    </div>
-                        </div>
-                    
-                     <!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/survey.png" alt="..." />
-                                      </div>
-                         </div>
-                                             
-                    <!-- Portfolio Item 4-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/game.png" alt="..." />
-                        </div>
-                    </div>
-                    <!-- Portfolio Item 5-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/safe.png" alt="..." />
-                        </div>
-                    </div>
-                    <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
+                                                        <!-- Portfolio Item 2 -->
+<div class="col-md-6 col-lg-4 mb-5">
+    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
+        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+        </div>
+        <img class="img-fluid" src="/dist/assets/img/portfolio/galeri1.png" alt="..." />
+    </div>
+</div>
+
+<!-- Portfolio Item 3 -->
+<div class="col-md-6 col-lg-4 mb-5">
+    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
+        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+        </div>
+        <img class="img-fluid" src="/dist/assets/img/portfolio/survey.png" alt="..." />
+    </div>
+</div>
+
+<!-- Portfolio Item 4 -->
+<div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+        </div>
+        <img class="img-fluid" src="/dist/assets/img/portfolio/game.png" alt="..." />
+    </div>
+</div>
+
+<!-- Portfolio Item 5 -->
+<div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+    <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
+        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+        </div>
+        <img class="img-fluid" src="/dist/assets/img/portfolio/safe.png" alt="..." />
+    </div>
+</div>
+
+<!-- Portfolio Item 6 -->
+<div class="col-md-6 col-lg-4">
     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-            <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+            <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
         </div>
         <img class="img-fluid" src="/dist/assets/img/portfolio/submarine.png" alt="Submarine image" />
     </div>
 </div>
-                </div>
-            </div>
-        </section>
+
 <!-- About Buku-->
         <section class="page-section bg-primary text-white mb-0" id="buku">
             <div class="container"></div>
