--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">PENGEMBANGAN KOMPETENSI GURU</p>
+                <p class="masthead-subheading font-weight-light mb-0"><a href="./quiz" class="btn btn-primary">Klik Disini Untuk Melanjutkan</a</p>
             </div>
         </header>
         <!-- Bootstrap core JS-->
